correct for button on safari / nobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -157,15 +157,15 @@ hr {
 .btn {
   background-color: #B8CBDF;
   text-shadow: 1px 1px 20px #000000;
-  border-radius: 7px;
-  height: 6px;
-  line-height: 6px;
+  border-radius: 0.4375rem;
+  height: 0.375rem;
+  line-height: 0.375rem;
   color: #EEEEEE;
   font-family: "Archivo Black", sans-serif;
-  width: 150px;
-  font-size: 20px;
+  width: 9.375rem;
+  font-size: 1.25rem;
   font-weight: 600;
-  padding: 15px;
+  padding: 1rem;
   text-decoration: none;
   display: inline-block;
   cursor: pointer;
@@ -187,9 +187,9 @@ hr {
   background-image: -ms-linear-gradient(top, #303841, #7AA5D2);
   background-image: -o-linear-gradient(top, #303841, #7AA5D2);
   background-image: linear-gradient(to bottom, #303841, #7AA5D2);
-  -webkit-border-radius: 7px;
-  -moz-border-radius: 7px;
-  border-radius: 7px;
+  -webkit-border-radius: 0.4375rem;
+  -moz-border-radius: 0.4375rem;
+  border-radius: 0.4375rem;
 }
 
 .footer-link {
